# claude-play

./: .gitignore  CLAUDE.md  package-lock.json  start-backend.sh  start-frontend.sh  test-fullstack.js
.github/workflows/: claude.yml
backend/: main.py  pyproject.toml
frontend/src/: App.css  App.tsx  api.ts  types.ts
